--- a/.github/workflows/single-job.yml
+++ b/.github/workflows/single-job.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  combined-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
