--- a/.github/workflows/multi-job.yml
+++ b/.github/workflows/multi-job.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm install
 
       - name: Run unit tests
-        run: npm test:unit
+        run: npm run test:unit
 
   integration-tests:
     runs-on: ubuntu-latest
@@ -53,7 +53,7 @@ jobs:
         run: npm install
 
       - name: Run integration tests
-        run: npm test:integration
+        run: npm run test:integration
         env:
           POSTGRES_HOST: my-postgres-container
           POSTGRES_PASSWORD: postgres
